reformat normalization pages

--- a/Benchmarking_Normalization_Methods/benchmarking_normalization.html
+++ b/Benchmarking_Normalization_Methods/benchmarking_normalization.html
@@ -19454,8 +19454,12 @@ all of MD as it is not optimized for dense, information rich UIs.
                             href="../website/about.html"
                             style="color: #ffffff">About</a></li>
                     <li class="nav-item"><a class="nav-link"
-                            href="../website/stats.html"
-                            style="color: #ffffff">Stats</a></li>
+                        href="../website/code.html" style="color:#ffffff">Code</a></li>
+                    <li class="nav-item"><a class="nav-link" 
+                        href="../website/data.html" style="color:#ffffff">Data</a></li>
+                    <li class="nav-item"><a class="nav-link"
+                        href="../website/stats.html"
+                        style="color: #ffffff">Stats</a></li>
                 </ul>
             </div>
         </div>
