--- a/Benchmarking_Normalization_Methods/benchmarking_normalization_v2.html
+++ b/Benchmarking_Normalization_Methods/benchmarking_normalization_v2.html
@@ -19381,7 +19381,7 @@ all of MD as it is not optimized for dense, information rich UIs.
 </head>
 
 <body class="jp-Notebook" data-jp-theme-light="true"
-    data-jp-theme-name="JupyterLab Light">
+    data-jp-theme-name="JupyterLab Light" style="padding:0px">
     <nav class="border navbar navbar-expand-md navbar-light">
         <div class="container-fluid" id="nav-text">
             <img alt="logo" src="../website/logo.png" style="height: 2rem;">
@@ -19398,6 +19398,10 @@ all of MD as it is not optimized for dense, information rich UIs.
                     <li class="nav-item"><a class="nav-link"
                             href="../website/about.html"
                             style="color: #ffffff">About</a></li>
+                    <li class="nav-item"><a class="nav-link" 
+                            href="../website/code.html" style="color:#ffffff">Code</a></li>
+                    <li class="nav-item"><a class="nav-link" 
+                            href="../website/data.html" style="color:#ffffff">Data</a></li>
                     <li class="nav-item"><a class="nav-link"
                             href="../website/stats.html"
                             style="color: #ffffff">Stats</a></li>
@@ -19409,9 +19413,6 @@ all of MD as it is not optimized for dense, information rich UIs.
         style="margin-left: 5%; margin-right: 7%; margin-top: 10px; margin-bottom: 20px">
         <div style="text-align: end">
             <div style="display: inline-block">
-                <button class="btn btn-primary"><a
-                        href="https://colab.research.google.com/drive/1mv12pG958fQMDoO5b2Kg0Nwp6QY2WXk3?usp=sharing"
-                        target="_blank">Google Colab</a></button>
                 <button class="btn btn-primary"><a
                         href="norm_benchmark_limma.zip">Download</a></button>
             </div>
