Update formatting and navbar on all pages

--- a/website/about.html
+++ b/website/about.html
@@ -23,6 +23,8 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="about.html" style="color: #ffffff">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="code.html" style="color: #ffffff">Code</a></li>
+                        <li class="nav-item"><a class="nav-link" href="data.html" style="color: #ffffff">Data</a></li>
                         <li class="nav-item"><a class="nav-link" href="stats.html" style="color: #ffffff">Stats</a></li>
                     </ul>
                 </div>
@@ -35,12 +37,12 @@
         <div id="about-content">
             <div>
                 <p class="about-text">
-                    The volume and diversity of transcriptomics datasets is rapidly growing. At the same time, each year hundreds of new tools are published to perform various steps in transcriptomics data analysis. For example, algorithms have been developed to identify differentially expressed genes, perform gene set enrichment analysis, and visualize transcriptomics data as heatmaps and scatter plots. In order to evaluate methods that perform these tasks, there is a need for developing objective benchmarks that can be used to compare the quality of tools and algorithms to maximally and accurately extract biological knowledge from these data. 
+                    The volume and diversity of transcriptomics datasets is rapidly growing. At the same time, hundreds of new tools are published each year to perform various steps in transcriptomics data analysis, such as identifying differentially expressed genes, performing gene set enrichment analysis, and visualizing transcriptomics data as heatmaps and scatter plots. In order to evaluate methods that perform these tasks, there is a need for developing objective benchmarks that can be used to compare the quality of tools and algorithms to maximally and accurately extract biological knowledge from these data. 
                 </p>
             </div>
-            <div>
-                <img alt="graphical abstract" src="graphical_abstract.png" width="100%" class = "center">
-            </div>
+        </div>
+        <div>
+            <img alt="graphical abstract" src="graphical_abstract.png" width="50%" class = "center">
         </div>
         <p class="about-text">
             The goal of this resource is to provide the community with datasets and template workflows needed for benchmarking different tools for gene expression analysis. 
