--- a/website/stats.html
+++ b/website/stats.html
@@ -23,6 +23,8 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="about.html" style="color: #ffffff">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="code.html" style="color: #ffffff">Code</a></li>
+                        <li class="nav-item"><a class="nav-link" href="data.html" style="color: #ffffff">Data</a></li>
                         <li class="nav-item"><a class="nav-link" href="stats.html" style="color: #ffffff">Stats</a></li>
                     </ul>
                 </div>
