Add updated L1000 data download notebook

--- a/website/code.html
+++ b/website/code.html
@@ -52,6 +52,20 @@
             <div class="row">
                 <div class="box">
                     <h5>
+                        Retrieving L1000 Data
+                    </h5>
+                    <p>
+                        All L1000 profiles used in the benchmarking notebooks can be downloaded directly from an Amazon S3 bucket. The download links are provided in the SigCom LINCS Metadata, which can be accessed from the SigCom LINCS API. 
+                    </p>
+                    <p>
+                        The following notebook provides a guide for downloading L1000 chemical, overexpression, shRNA knockdown, and CRISPR knockout profiles. 
+                    </p>
+                    <ul>
+                        <li>
+                            Retrieving L1000 Data via SigCom LINCS API <a href="../L1000_data/Retrieving_L1000_Data.ipynb">Notebook Download</a> and <a href="../L1000_data/Retrieving_L1000_Data.html">Example HTML</a>
+                        </li>
+                    </ul>
+                    <h5>
                         Normalization Methods
                     </h5>
                     <p>
