add dex target GEO datasets

--- a/website/data.html
+++ b/website/data.html
@@ -52,7 +52,7 @@
                     </p>
                     <ul>
                         <li>
-                            <a href="https://docs.google.com/spreadsheets/d/1dXm3RC852vQdg7s3vaZwwFotxbi5AnYGa0mYMUmLtn8/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Compiled Spreadsheet of Studies</a> (Google Sheets)
+                            <a href="https://docs.google.com/spreadsheets/d/1ZF-OJcJV9BDPsQBCARCkLO-PyOm4hfk3YwkwWBxQ8fE/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Compiled Spreadsheet of Dexamethasone Studies</a> (Google Sheets)
                         </li>
                         <li>
                             <a href="rnaseq_sigs.html">Computed Signatures</a> (Webpage)
@@ -87,6 +87,14 @@
                     <h5>
                         Dexamethasone Targets
                     </h5>
+                    <p>
+                        RNA-seq
+                    </p>
+                    <ul>
+                        <li>
+                            <a href="https://docs.google.com/spreadsheets/d/1nQ8-vtPdI7_frKm3KNRp9jw3l6PVGw-DEczNjx9aSgk/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Compiled Spreadsheet of Dex Target Studies</a> (Google Sheets)
+                        </li>
+                    </ul>
                     <p>
                         ChIP-Seq
                     </p>
