add figures page

--- a/website/about.html
+++ b/website/about.html
@@ -25,6 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="about.html" style="color: #ffffff">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="code.html" style="color: #ffffff">Code</a></li>
                         <li class="nav-item"><a class="nav-link" href="data.html" style="color: #ffffff">Data</a></li>
+                        <li class="nav-item"><a class="nav-link" href="figures.html" style="color: #ffffff">Figures</a></li>
                         <li class="nav-item"><a class="nav-link" href="stats.html" style="color: #ffffff">Stats</a></li>
                     </ul>
                 </div>
@@ -57,7 +58,7 @@
             Users can also benchmark additional methods by customizing the Jupyter Notebooks for their own needs. Overall, the Dexamethasone Benchmarking Resource provides a step forward toward improving the quality of bioinformatics workflow for the betterment of knowledge extraction from omics datasets.
         </p>
         <div>
-            <h4>References</h4>
+            <h2>References</h2>
             <p>[1] Evangelista JE, Clarke DJB, Xie Z, Lachmann A, Jeon M, Chen K, Jagodnik KM, Jenkins SL, Kuleshov MV, Wojciechowicz ML, Schürer SC, Medvedovic M, Ma’ayan A. SigCom LINCS: data and metadata search engine for a million gene expression signatures. Nucleic Acids Research, 2022; gkac328, https://doi.org/10.1093/nar/gkac328</p>
             <p>[2] ENCODE Project Consortium. An integrated encyclopedia of DNA elements in the human genome. Nature. 2012 Sep 6;489(7414):57-74. doi: 10.1038/nature11247. PMID: 22955616; PMCID: PMC3439153.</p>
             <p>[3] Luo Y, Hitz BC, Gabdank I, Hilton JA, Kagda MS, Lam B, Myers Z, Sud P, Jou J, Lin K, Baymuradov UK, Graham K, Litton C, Miyasato SR, Strattan JS, Jolanki O, Lee JW, Tanaka FY, Adenekan P, O'Neill E, Cherry JM. New developments on the Encyclopedia of DNA Elements (ENCODE) data portal. Nucleic Acids Res. 2020 Jan 8;48(D1):D882-D889. doi: 10.1093/nar/gkz1062. PMID: 31713622; PMCID: PMC7061942.</p>
