--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="website/about.html" style="color: #ffffff">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="website/code.html" style="color: #ffffff">Code</a></li>
                         <li class="nav-item"><a class="nav-link" href="website/data.html" style="color: #ffffff">Data</a></li>
+                        <li class="nav-item"><a class="nav-link" href="website/figures.html" style="color: #ffffff">Figures</a></li>
                         <li class="nav-item"><a class="nav-link" href="website/stats.html" style="color: #ffffff">Stats</a></li>
                     </ul>
                 </div>
