--- a/website/data.html
+++ b/website/data.html
@@ -25,6 +25,7 @@
                         <li class="nav-item"><a class="nav-link" href="about.html" style="color: #ffffff">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="code.html" style="color: #ffffff">Code</a></li>
                         <li class="nav-item"><a class="nav-link" href="data.html" style="color: #ffffff">Data</a></li>
+                        <li class="nav-item"><a class="nav-link" href="figures.html" style="color: #ffffff">Figures</a></li>
                         <li class="nav-item"><a class="nav-link" href="stats.html" style="color: #ffffff">Stats</a></li>
                     </ul>
                 </div>
