Fix page titles

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <link href="website/styles.css" rel="stylesheet">
         <link href="website/favicon.ico" rel="icon">
 
-        <title>Dexamethasone Benchmark</title>
+        <title>Dex-Benchmark Resource</title>
     </head>
     <body>
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
                 <img alt="logo" src="website/logo.png" style="height: 3.5rem;">
-                <a class="navbar-brand" href="#" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
+                <a class="navbar-brand" href="#" style="color: #ffffff">Dexamethasone Benchmark Resource</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -33,15 +33,15 @@
         </nav>
         <main class="py-4">
             <h1 class="text-center">
-                The Dexamethasone Benchmarking Resource
+                The Dexamethasone Benchmark Resource
             </h1>
             <p class="text-center" style="font-size:20pt">
-                <em>Datasets and Code to Evaluate Methods for Processing Transcriptomics Data</em>
+                <em>Datasets and Code to Evaluate Algorithms for Transcriptomics Data Analysis</em>
             </p>
             <img alt="graphical abstract" src="website/workflowdiagram.png" width="75%" class = "center">
             <div class="row">
                     <p>
-                        The Dexamethasone Benchmarking Resource provides datasets and template workflows needed for benchmarking different tools for gene expression analysis. These datasets include microarray, RNA-seq, L1000, and ChIP-seq data related to dexamethasone and known targets such as NR3C1. Template workflows can be downloaded along with raw data to benchmark a set of gene expression profiles. Example code and visualizations are also provided. 
+                        The Dex-Benchmark Resource provides datasets and template workflows needed for benchmarking different tools for gene expression analysis. These datasets include microarray, RNA-seq, L1000, and ChIP-seq data related to dexamethasone and known targets such as NR3C1. Template workflows can be downloaded along with raw data to benchmark a set of gene expression profiles. Example code and visualizations are also provided. 
                     </p>
             </div>
         </main>
