--- a/website/about.html
+++ b/website/about.html
@@ -10,13 +10,13 @@
         <link href="styles.css" rel="stylesheet">
         <link href="favicon.ico" rel="icon">
 
-        <title>Dexamethasone Benchmark</title>
+        <title>Dex-Benchmark: About</title>
     </head>
     <body>
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
                 <img alt="logo" src="logo.png" style="height: 3.5rem;">
-                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
+                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmark Resource</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -33,7 +33,7 @@
         </nav>
     <main class="py-4">
         <h2 id="about-header">
-            About the Dexamethasone Benchmarking Resource 
+            About the Dexamethasone Benchmark (Dex-Benchmark) Resource 
         </h2>
         <div id="about-content">
             <div>
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div>
-            <img alt="graphical abstract" src="graphical_abstract.png" width="50%" class = "center">
+            <img alt="graphical abstract" src="workflowdiagram.png" width="70%" class = "center">
         </div>
         <p class="about-text">
             The goal of this resource is to provide the community with datasets and template workflows needed for benchmarking different tools for gene expression analysis. 
@@ -55,7 +55,7 @@
             <a href="https://maayanlab.cloud/gen3va/" target="_blank">GEN3VA</a><sup>6</sup>, and
             <a href="https://maayanlab.cloud/chea3/" target="_blank">ChEA</a><sup>7</sup>.
             Some of the provided data is used for the template workflows that compare state-of-the-art algorithms currently used by the community to perform transcriptomics analyses. 
-            Users can also benchmark additional methods by customizing the Jupyter Notebooks for their own needs. Overall, the Dexamethasone Benchmarking Resource provides a step forward toward improving the quality of bioinformatics workflow for the betterment of knowledge extraction from omics datasets.
+            Users can also benchmark additional methods by customizing the Jupyter Notebooks for their own needs. Overall, the Dex-Benchmark Resource provides a step forward toward improving the quality of bioinformatics workflow for the betterment of knowledge extraction from omics datasets.
         </p>
         <div>
             <h2>References</h2>
