--- a/website/data.html
+++ b/website/data.html
@@ -10,13 +10,13 @@
         <link href="styles.css" rel="stylesheet">
         <link href="favicon.ico" rel="icon">
 
-        <title>Dexamethasone Benchmark</title>
+        <title>Dex-Benchmark: Data</title>
     </head>
     <body>
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
                 <img alt="logo" src="logo.png" style="height: 3.5rem;">
-                <a class="navbar-brand" href="#" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
+                <a class="navbar-brand" href="#" style="color: #ffffff">Dexamethasone Benchmark Resource</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,7 +40,7 @@
                     Listed below are a variety of manually and programmatically compiled datasets related to either dexamethasone perturbation or perturbation of a known genetic target of dexamethasone. 
                 </p>
                 <p>
-                    Some datasets have accompanying Jupyter Notebooks comprised of code for benchmarking the specific dataset, which can be found on the <em>Data</em> page. 
+                    Some datasets have accompanying Jupyter Notebooks comprised of code for benchmarking the specific dataset, which can be found on the <em>Code</em> page. 
                 </p>
             </div>
             <div class="row">
