--- a/website/code.html
+++ b/website/code.html
@@ -9,13 +9,13 @@
         <link href="styles.css" rel="stylesheet">
         <link href="favicon.ico" rel="icon">
 
-        <title>Dexamethasone Benchmark</title>
+        <title>Dex-Benchmark: Code</title>
     </head>
     <body>
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
                 <img alt="logo" src="logo.png" style="height: 3.5rem;">
-                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
+                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmark Resource</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -32,7 +32,7 @@
         </nav>
         <main class="py-4">
             <h2>
-                Dexamethasone Benchmarking Code Notebooks 
+                Dexamethasone Benchmark Code Notebooks 
             </h2>
             <div class="row">
                 <div>
