--- a/website/stats.html
+++ b/website/stats.html
@@ -10,13 +10,13 @@
         <link href="styles.css" rel="stylesheet">
         <link href="favicon.ico" rel="icon">
 
-        <title>Dexamethasone Benchmark</title>
+        <title>Dex-Benchmark: Stats </title>
     </head>
     <body>
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
                 <img alt="logo" src="logo.png" style="height: 3.5rem;">
-                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
+                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmark Resource</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
