add consensus signature benchmarking HTML

--- a/website/code.html
+++ b/website/code.html
@@ -67,26 +67,6 @@
                         </li>
                     </ul>
                     <h5>
-                        Normalization Methods
-                    </h5>
-                    <p>
-                        Each of the following notebooks benchmarks the same normalization methods (CPM, log transformation, quantile normalization, z-score normalization, log + quantile normalization, and log + quantile + z-score normalization). Differential gene expression analysis method is performed via the method specified in the notebook name. 
-                    </p>
-                    <p>
-                        The GEO study used in the example notebooks is <a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE137535">GSE137535</a>. Fully computed signatures from this study can be found <a href="rnaseq_sigs.html">here</a>.
-                    </p>
-                    <ul>
-                        <li>
-                            Benchmarking Normalization Methods for RNA-seq Data (CD Version) <a href="../Benchmarking_Normalization_Methods/benchmarking_normalization.ipynb">Notebook Download</a> and <a href="../Benchmarking_Normalization_Methods/benchmarking_normalization.html">Example HTML</a>
-                        </li>
-                        <li>
-                            Benchmarking Normalization Methods for RNA-seq Data (Limma Version) <a href="../Benchmarking_Normalization_Methods/benchmarking_normalization_v2.ipynb">Notebook Download</a> and <a href="../Benchmarking_Normalization_Methods/benchmarking_normalization_v2.html">Example HTML</a>
-                        </li>
-                        <li>
-                            Benchmarking Normalization Methods for RNA-seq Data (Fold Change Version) <a href="../Benchmarking_Normalization_Methods/benchmarking_normalization_v3.ipynb">Notebook Download</a> and <a href="../Benchmarking_Normalization_Methods/benchmarking_normalization_v3.html">Example HTML</a>
-                        </li>
-                    </ul>
-                    <h5>
                         Differential Gene Expression Analysis Methods
                     </h5>
                     <p>
@@ -123,6 +103,12 @@
                                 </li>
                             </ul>
                         </li>
+                    </ul>
+                    <h5>
+                        L1000 Consensus Signatures
+                    </h5>
+                    <ul>
+                        <li>Benchmarking L1000 consensus signatures <a href="../Benchmarking_L1000_Consensus/benchmarking_L1000_crossed_consensus.ipynb">Notebook Download</a> and <a href="../Benchmarking_L1000_Consensus/benchmarking_L1000_crossed_consensus.html">Example HTML</a></li>
                     </ul>
                 </div>
             </div>
